Adicionei os exercícios da parte dos Links

--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/01-HTML_CSS_Estruturas_de_Pagina/index.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/01-HTML_CSS_Estruturas_de_Pagina/index.html
@@ -18,11 +18,11 @@
         <h3>Crie uma lista de amigos:</h3>
         <hr>
         <ol>
-            <li>Lucca</li>
-            <li>Rods</li>
-            <li>Zezé</li>
-            <li>Ellen</li>
-            <li>DjoDjo</li>
+            <li><a href="#Lucca">Lucca</a></li>
+            <li><a href="#Rods">Rods</a></li>
+            <li><a href="#Zeze">Zezé</a></li>
+            <li><a href="#Ellen">Ellen</a></li>
+            <li><a href="#DjoDjo">DjoDjo</a></li>
         </ol>
         <hr>
     <h3>Adicione uma imagem externa:</h3>
@@ -32,5 +32,35 @@
         <h3>Adicione uma imagem local:</h3>
         <hr>
         <img src="./Eu.png" width="430px" alt="Eu, Gustavo, em um momento feliz!">
+
+    <h2>Parte 2:</h2>
+    <ul>
+        <li>Crie um parágrafo para cada amigo da lista.</li>
+        <li>Crie um link entre a sua lista e o parágrafo da pessoa.</li>
+        <li>Crie um link para a página do google.</li>
+    </ul>
+
+    <h2>Execução:</h2>
+
+   <h3 id="Lucca">Lucca</h3>
+   <p>Lucca é um amigo que hoje está na turma 19, tribo C. Eu já  o conhecia<br> quando entramos na Trybe. Futuramente,  nós iremos contruir um unicórnio <br>e seremos os mais novos bilionários brasileiros.</p>
+
+
+   <h3 id="Rods">Rods</h3>
+   <p>Rods é o nosso professor. Com grande entusiasmo e carisma, nos passa todo o <br> conhecimento necessário para que possamos nos tornar desenvolvedores e ter<br> uma carreira brilhante e magnífica dentro da área.</p>
+
+
+   <h3 id="Zeze">Zezé</h3>
+   <p>Zezé é nosso monitor, instrutor e moderador. Uma pessoa excelente que <br>preenche nossos dias com informações, alegria e conteúdo. Com toda certeza é <br>uma das peças fundamentais para nosso desenvolvimento.</p>
+
+   <h3 id="Ellen">Ellen</h3>
+   <p>Ellen também é nossa instrutora e monitora. Daeneres brasileira, tem o poder da<br> mutagem e o controle sobre nosso tempo de participação. Nos direciona com<br> maestria pelos caminhos da lógica e é outra peça fundamental para nosso <br>dia-a-dia e evolução.</p>
+
+   <h3 id="DjoDjo">DjoDjo</h3>
+   <p>DjoDjo foi quem nos recebeu em nossa integração com muita simpatia! Ela me <br>aceitou como conexão no LinkedIn e, por isso, se tornou a quinta colocada entre<br> meus melhores amigos trybers.</p>
+
+   <h3>Se quiserem saber mais sobre eles, <br> procurem no <a href="http://www.google.com" target="_blank">google!</a></h3>
+
+
     </body>
 </html>
