--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/02-HTML_CSS-Primeiros_passos_em_CSS/index.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/02-HTML_CSS-Primeiros_passos_em_CSS/index.html
@@ -7,6 +7,7 @@
         h1{
             width: 65px;
             color: orange;
+            font-family: sans-serif;
         }
         ul{
             background-color: sienna;
@@ -14,18 +15,40 @@
         .Pergunta-cores{
             background-color: indigo;
             width: 180px;
+            color: white;
         }
-
-
+        p{
+            font-weight: 600;
+            font-size: 3em;
+        }
+        body{
+            font-size: 16px;
+        }
+        ul{
+            font-style: italic;
+            line-height: 30px;
+            text-align: left;
+            text-decoration-line: underline;
+        }
+        #amarelo {
+            background-color: yellow;
+        }
+        #vermelho {
+            background-color: red;
+        }
+        #marrom {
+            background-color: brown;
+        }
+        
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="Pergunta-cores">Qual é a sua cor favorita?</p>
     <ul class="Pergunta-cores">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
