Adicionei o link css aos arquivos html

--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/02-Posicionamento_de_Elementos.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/02-Posicionamento_de_Elementos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Posicionamento de elementos</title>
-    <link rel="stylesheet" href="./style(2).css" />
+    <link rel="stylesheet" href="02-Posicionamento_de_Elementos.css" />
   </head>
   <body>
     <h1>Exercícios de fixação 3.3</h1>
