--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/04-Pseudoclasses.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/04-Pseudoclasses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pseudoclasses</title>
-  <link rel="stylesheet" href="style(4).css">
+  <link rel="stylesheet" href="04-Pseudoclasses.css">
 </head>
 <body>
   <h1>Paleta de Cores</h1>
