--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/01-Box_Model.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/01-Box_Model.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercício de Fixação: box model</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="01-Box_Model.css">
 </head>
 <body>
   <div class="caixa width-and-height" style="background: #036b52">A</div>
