--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/03-Agrupando_Seletores.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/03-HTML_CSS-Seletores_e_Posicionamento/03-Agrupando_Seletores.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style(3).css">
+    <link rel="stylesheet" href="03-Agrupando_Seletores.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
