--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/ranking.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/ranking.html
@@ -10,6 +10,10 @@
         text-align: center;
       }
 
+      h1 {
+        margin-left: 3%;
+      }
+
       .first {
         background-color: rgb(235, 200, 84);
         font-size: 20px;
