--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
@@ -6,13 +6,14 @@
     <title>Shrimp</title>
     <link rel="stylesheet" href="./shrimp.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Permanent+Marker&display=swap');
         </style>
     
   </head>
   <body>
     <header>
         <img></img>
+        <h1 class="cabeçalho">Soco a 80km/h: Conheça o Stomatopoda!!</h1>
         <nav>
             <ul>
                 <li><button class="button">ABC</button></li>
