Adicionada a section do main

--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
@@ -16,13 +16,18 @@
         <h1 class="cabeçalho">Soco a 80km/h: Conheça o Stomatopoda!!</h1>
         <nav>
             <ul>
-                <li><button class="button">ABC</button></li>
-                <li><button class="button">DEF</button></li>
-                <li><button class="button">GHI</button></li>
+                <li><button class="button">PÁGINA INICIAL</button></li>
+                <li><button class="button">SOBRE</button></li>
+                <li><button class="button">CONTATO</button></li>
+                <li><button class="button">ALGUMA COISA</button></li>
+                <li><button class="button">FONTES</button></li>
             </ul>
         </nav>
     </header>
     <main>
+        <section>
+            
+        </section>
     </main>
   </body>
 </html>
