Adicionado imagens e primeira sessao

--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-        <img></img>
+        <img class="imagem-topo"></img>
         <h1 class="cabeçalho">Soco a 80km/h: Conheça o Stomatopoda!!</h1>
         <nav>
             <ul>
@@ -26,7 +26,10 @@
     </header>
     <main>
         <section>
-            
+                <img class="olhos" src="./imagens/Olhos.jpg" alt="Os olhos do bichano"></img>
+                <h2>Supervisão!!</h2>
+                <img class="balao" src="./imagens/text-speech.png" alt="Balão de texto">
+
         </section>
     </main>
   </body>
