Algumas alteraçoes esteticas no css e adicao do <p>

--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.html
@@ -27,8 +27,9 @@
     <main>
         <section>
                 <img class="olhos" src="./imagens/Olhos.jpg" alt="Os olhos do bichano"></img>
-                <h2>Supervisão!!</h2>
+                <h2 id="supervisao">Supervisão!!</h2>
                 <img class="balao" src="./imagens/text-speech.png" alt="Balão de texto">
+                <p id="supervisao-pg">Ele têm os olhos mais complexos do reino animal e é capaz de ver cores invisíveis a vários outros animais, do ultravioleta ao infravermelho!!</p>
 
         </section>
     </main>
