--- a/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/01-Javascript-DOM_e_Seletores/exemplo.html
+++ b/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/01-Javascript-DOM_e_Seletores/exemplo.html
@@ -3,9 +3,9 @@
   <body>
     <header>
       <h2 id="page-title">Título</h2>
-      <p id="paragraph">Dê uma cor para este parágrafo!</p>
+      <p id="paragraph" class="paragrafo">Dê uma cor para este parágrafo!</p>
       <h4 id="subtitle">Subtítulo</h4>
-      <p id="second-paragraph">Segundo parágrafo!</p>
+      <p id="second-paragraph" class="paragrafo">Segundo parágrafo!</p>
       <p></p>
     </header>
     <script>
@@ -38,6 +38,10 @@
       document.getElementById('paragraph').style.height = '100px'
       document.getElementById('paragraph').innerText = 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis optio placeat esse? Temporibus, vel ut recusandae hic exercitationem tenetur in illo cumque mollitia natus, a ullam aperiam pariatur, fuga molestias.'
 
+
+      document.getElementsByClassName('paragrafo')[1].style.backgroundColor= 'cyan'
+
+      document.getElementsByTagName('h4')[0].style.color = 'red'
 
     </script>
   </body>
