--- a/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
+++ b/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
@@ -72,7 +72,10 @@
       section.className = 'center-content'
       localMain.appendChild(section)
 
-
+      let localSection = document.querySelector('.center-content');
+      let p = document.createElement('p');
+      p.innerText = "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, corrupti. At consequatur obcaecati sequi, tempore recusandae neque quasi vero impedit omnis, esse dicta optio sint vitae illum ut voluptate saepe? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum possimus nihil quasi. Optio vitae corporis vero recusandae dolore atque quo commodi, ab neque debitis impedit excepturi culpa libero facilis perferendis."
+      localSection.appendChild(p)
      
 
   </script>
