--- a/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
+++ b/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
@@ -81,7 +81,9 @@
       section2.className = 'left-content';
       localMain.appendChild(section2);
 
-
+      let section3 = document.createElement('section');
+      section3.className = 'right-content';
+      localMain.appendChild(section3);
 
   </script>
   </body>
