--- a/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
+++ b/Fundamentos/05-Javascript-DOM_Eventos_WebStorage/02-Javascrips-Trabalhando_com_Elementos/exercicio.html
@@ -85,6 +85,13 @@
       section3.className = 'right-content';
       localMain.appendChild(section3);
 
+      localSection2 = document.querySelector('.left-content');
+      let imagem = document.createElement('img');
+      imagem.className = 'small-image';
+      imagem.src = 'https://picsum.photos/200';
+      localSection2.appendChild(imagem)
+
+
   </script>
   </body>
 </html>
