--- a/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
+++ b/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
@@ -8,7 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Formulário 01
+        </h1>
+    </header>
+    <form action="" method="get">
+        <fieldset>
+            <div class="linha">
+              <div class="conteudo">
+                <label for="input-text">Nome</label>
+                <input type="text" name="nome" id="input-text" required maxlength="40">
+              </div>
+            </div>
+        </fieldset>
+    </form>
 </body>
 <script src="script.js"></script>
 </html>
