--- a/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
+++ b/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
@@ -15,10 +15,75 @@
     </header>
     <form action="" method="get">
         <fieldset>
-            <div class="linha">
-              <div class="conteudo">
-                <label for="input-text">Nome</label>
-                <input type="text" name="nome" id="input-text" required maxlength="40">
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-nome">Nome</label>
+                <br>
+                <input type="text" name="nome" id="input-nome" required maxlength="40">
+              </div>
+            </div>
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-email">Email</label>
+                <br>
+                <input type="text" name="Email" id="input-email" required maxlength="50">
+              </div>
+            </div>
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-cpf">CPF</label>
+                <br>
+                <input type="text" name="CPF" id="input-cpf" required maxlength="11">
+              </div>
+            </div>
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-endereco">Endereço</label>
+                <br>
+                <input type="text" name="endereco" id="input-endereco" required maxlength="200">
+              </div>
+            </div>
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-cidade">Cidade</label>
+                <br>
+                <input type="text" name="cidade" id="input-cidade" required maxlength="28">
+              </div>
+            </div>
+
+            <div class="linha-form">
+              <div class="conteudo-linha">
+                <label for="input-estado">Estado</label>
+                <br>
+                <select name="estado" id="input-estado">
+                  <option value="AC">Acre</option>
+                  <option value="AL">Alagoas</option>
+                  <option value="AP">Amapá</option>
+                  <option value="AM">Amazonas</option>
+                  <option value="BA">Bahia</option>
+                  <option value="CE">Ceará</option>
+                  <option value="DF">Distrito Federal</option>
+                  <option value="ES">Espírito Santo</option>
+                  <option value="GO">Goiás</option>
+                  <option value="MA">Maranhão</option>
+                  <option value="MT">Mato Grosso</option>
+                  <option value="MS">Mato Grosso do Sul</option>
+                  <option value="MG">Minas Gerais</option>
+                  <option value="PA">Pará</option>
+                  <option value="PB">Paraíba</option>
+                  <option value="PR">Paraná</option>
+                  <option value="PE">Pernambuco</option>
+                  <option value="PI">Piauí</option>
+                  <option value="RJ">Rio de Janeiro</option>
+                  <option value="RN">Rio Grande do Norte</option>
+                  <option value="RS">Rio Grande do Sul</option>
+                  <option value="RO">Rondônia</option>
+                  <option value="RR">Roraima</option>
+                  <option value="SC">Santa Catarina</option>
+                  <option value="SP">São Paulo</option>
+                  <option value="SE">Sergipe</option>
+                  <option value="TO">Tocantins</option>
+                </select>
               </div>
             </div>
         </fieldset>
