--- a/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
+++ b/Fundamentos/06-HTML_e_CSS:Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
@@ -119,9 +119,16 @@
              <textarea name="descricao-cargo" id="input-descricao" cols="30" rows="6" maxlength="500" required></textarea>
             </div>
           </div>
+          <div class="linha-form">
+            <div class="conteudo-linha">
+              <label for="input-data">Data de início</label>
+              <br>
+              <input type="date" name="data" id="input-data" required>
+            </div>
+          </div>
         </fieldset>
-        <div class="linha-form">
-          <button type="submit">Enviar</button>
+        <div class="btns">
+          <button type="submit" id="btn">Enviar</button>
         </div>
     </form>
 </body>
