Adicionado o botao apagar

--- a/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
+++ b/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/01-HTML_e_CSS-Forms/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -129,6 +129,7 @@
         </fieldset>
         <div class="btns">
           <button type="submit" id="btn">Enviar</button>
+          <button type="reset">Apagar</button>
         </div>
     </form>
 </body>
