--- a/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/02-Bibliotecas_Javascript_e_Frameworks_CSS/index.html
+++ b/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/02-Bibliotecas_Javascript_e_Frameworks_CSS/index.html
@@ -131,6 +131,7 @@
         </fieldset>
         <div >
           <button type="submit" id="btn">Enviar</button>
+          <button type="reset"></button>
         </div>
     </form>
 </body>
