Bloco 06 e abertura do bloco 07

--- a/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/03-Flexbox/index.html
+++ b/Fundamentos/06-HTML_e_CSS-Forms_Flexbox_e_Responsivo/03-Flexbox/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>CSS FLEXBOX - ALIGN SELF</title>
     <style>
       .container {
@@ -40,5 +41,9 @@
       <li class="change">ELEMENTO TESTE</li>
       <li class="keep">REFERÊNCIA</li>
     </ul>
+    <input type="file" name="" id="" onchange="carregaImagem(event)">
+    <img src="" alt="" id="inputfile">
+    <div class="img"></div>
   </body>
+  <script src="script.js"></script>
 </html>
